2010-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Rewrite. Split sparse and dense case. Treat
	cell-valued subs efficiently. Optimize dense case for @sum, @max and
	@min. Optimize the @(x){x} reduction. Add tests.

2010-02-04  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/dir.m: Fix month passed to datenum.

2010-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* general/private/__isequal__.m: Handle function handles.

2010-02-01  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m (get_old_gnuplot_color): Remove as
	no longer used (for gnuplot 4.0).

	* plot/private/__scatter__.m: Treat "flat" colored patches as
	a single patch.
	* plot/__go_draw_axes__.m: If a patch object is flat, treat its
	outline with the gnuplot "palette".

2010-01-30  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* statistics/tests/kruskal_wallis_test.m: Replace chisquare_cdf
	by chi2cdf.

2010-01-29  Ben Abbott  <bpabbott@mac.com>

	* plot/axis.m, plot/__go_draw_axes__.m, plot/colorbar.m,
	plot/isocolors.m, plot/isonormals.m, plot/isosurface.m,
	plot/plotyy.m, plot/polar.m, plot/surfl.m, 
	plot/private/__actual_axis_position.m:
	Replace dataaspectratio and dataaspectratiomode properties with
	plotboxaspectratio and plotboxaspectratio properties.

2010-01-29  John W. Eaton  <jwe@octave.org>

	* polynomial/compan.m, polynomial/conv.m, polynomial/deconv.m,
	polynomial/mpoles.m, polynomial/polyderiv.m,
	polynomial/polygcd.m, polynomial/polyout.m,
	polynomial/polyreduce.m, polynomial/polyval.m,
	polynomial/polyvalm.m, polynomial/residue.m:
	Point to polyint in @seealso, not polyinteg.

	* deprecated/module.mk (deprecated_FCN_FILES):
	Remove delete files from the list.

	* deprecated/beta_cdf.m, deprecated/beta_inv.m,
	deprecated/beta_pdf.m, deprecated/beta_rnd.m,
	deprecated/binomial_cdf.m, deprecated/binomial_inv.m,
	deprecated/binomial_pdf.m, deprecated/binomial_rnd.m,
	deprecated/chisquare_cdf.m, deprecated/chisquare_inv.m,