@@ -1,3 +1,7 @@
+2010-02-06  Jaroslav Hajek  <highegg@gmail.com>
+
+	* general/accumarray.m: Small fixes.
+
 2010-02-05  Jaroslav Hajek  <highegg@gmail.com>
 
 	* general/accumarray.m: Rewrite. Split sparse and dense case. Treat
